# James-Raynard-cpp-course

./: .clang-format  README.md
Modern-02-Basics/: 008-special_member_functions.cpp  009-pointers_and_memory.cpp  010-array_string_and_vector.cpp  012-two_dimensional_arrays.cpp  015-numeric_types_and_literals.cpp  016-string_literals.cpp  017-casting.cpp  018-iterator_introduction.cpp  019-auto_keyword.cpp  020-loops_and_iterators.cpp  021-iterator_arithmetic_and_ranges.cpp  022-if_statements_and_switch.cpp  023-templates_overview.cpp  024-namespaces.cpp  025-function_pointer.cpp
Modern-03-String_Interface/: 026-basic_string_ops.cpp  027-searching_strings.cpp  028-adding_elements_to_strings.cpp  029-removing_elements_from_strings.cpp  030-converting_between_strings_and_numbers.cpp  031-miscellaneous_string_operations.cpp  032-character_functions.cpp
Modern-04-Files_and_Streams/: 035-streams_and_buffering.cpp
Modern-05-Special_Member_Functions_and_Operator_Overloading/: 047-constructors.cpp  048-copy_constructor.cpp  049-assignment_operator.cpp  050-synthesized_member_functions.cpp  051-shallow_and_deep_copying.cpp  052-copy_elision.cpp  053-conversion_operators.cpp  054-default_and_delete_keywords.cpp  057-friend_keyword.cpp  058-member_and_non_member.cpp  059-addition_operators.cpp  064-output_operator.cpp  (+5 more)
Modern-15-Project_A_Breakout_Game_Using_C++_with_SFML/02_random_walk/: CMakeLists.txt  constants.h  random_walk.cc
Modern-15-Project_A_Breakout_Game_Using_C++_with_SFML/03_sprite/: CMakeLists.txt  background.cc  background.h  constants.h  entity.h  main.cc
(+170 files in other folders)
